--- a/examples/2-2.fidelity_prediction_simulator.ipynb
+++ b/examples/2-2.fidelity_prediction_simulator.ipynb
@@ -30,8 +30,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-16 13:08:28,277\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67035136 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-16 13:08:28,442\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-04-18 12:09:44,435\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67088384 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2024-04-18 12:09:44,582\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -51,8 +51,8 @@
     "\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
     "\n",
-    "from janusq.data_objects.random_circuit import random_circuits, random_circuit\n",
-    "from janusq.data_objects.backend import Backend, LinearBackend, GridBackend, FullyConnectedBackend\n",
+    "from janusq.data_objects.random_circuit import random_circuits\n",
+    "from janusq.data_objects.backend import  LinearBackend\n",
     "\n",
     "from janusq.simulator.noisy_simulator import NoisySimulator\n",
     "import random\n",
@@ -92,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:02<00:00, 134.10it/s]\n"
+      "100%|██████████| 300/300 [00:01<00:00, 159.13it/s]\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:17<00:00,  1.72it/s]\n"
+      "100%|██████████| 30/30 [00:11<00:00,  2.59it/s]\n"
      ]
     }
    ],
@@ -185,8 +185,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "240it [00:00, 418732.51it/s]\n",
-      "60it [00:00, 366314.76it/s]\n"
+      "240it [00:00, 719537.50it/s]\n",
+      "60it [00:00, 527585.41it/s]\n"
      ]
     }
    ],
