--- a/examples/2-6.extend_framework_bug_identification.ipynb
+++ b/examples/2-6.extend_framework_bug_identification.ipynb
@@ -26,8 +26,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-16 12:18:53,785\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67043328 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-16 12:18:53,926\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-04-18 12:39:57,448\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67084288 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2024-04-18 12:39:57,586\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -43,19 +43,19 @@
     "\n",
     "from janusq.data_objects.algorithms import get_algorithm_circuits\n",
     "import random\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "from collections import defaultdict\n",
-    "import pandas as pd\n",
-    "import jax.numpy as jnp\n",
-    "\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
-    "\n",
-    "from janusq.tools.ray_func import map\n",
     "from janusq.data_objects.backend import LinearBackend\n",
     "import copy\n",
-    "import statistics\n",
     "from janusq.data_objects.circuit import Circuit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown in the following codes, the downstream model should be a Python class that take the upstream model as a attribute. This enables the model to extract topological and contextual information for further analysis. For example, in the bug identification, we use this information to guess the functionalities of each gate in the circuit and identify abnormal gates as bugs. "
    ]
   },
   {
@@ -84,7 +84,7 @@
     "        self.total_vecs = np.array(self.total_vecs)\n",
     "        self.functionalities = np.array(self.functionalities)\n",
     "\n",
-    "    def identify_bug(self, circuit, top_k = 3):\n",
+    "    def identify_bug(self, circuit: Circuit, top_k = 3, dist_threshold = .2):\n",
     "        gate_vecs = self.vec_model.vectorize(circuit)\n",
     "        \n",
     "        functionalities_per_gate = []\n",
@@ -92,25 +92,56 @@
     "        for analyzed_vec in gate_vecs:\n",
     "            dists = np.sqrt(np.sum((self.total_vecs - analyzed_vec)**2, axis=1))\n",
     "            \n",
-    "            top_dist_indices = np.argsort(dists)[:top_k]\n",
-    "            nearest_functionalities = self.functionalities[top_dist_indices]\n",
-    "            # nearest_dists = dists[top_dist_indices]\n",
-    "            nearest_functionalities = nearest_functionalities.tolist()\n",
+    "            nearest_dist_indices = np.argsort(dists)[:top_k]\n",
+    "            nearest_dists = dists[nearest_dist_indices]\n",
+    "            \n",
+    "            nearest_dist_indices = nearest_dist_indices[nearest_dists < dist_threshold]\n",
+    "            \n",
+    "            nearest_functionalities = self.functionalities[nearest_dist_indices]\n",
     "            functionalities_per_gate.append(nearest_functionalities)\n",
-    "            all_functionalities += nearest_functionalities\n",
+    "            all_functionalities += list(nearest_functionalities)\n",
     "        \n",
     "        top_functionalities = [\n",
     "            functionality\n",
     "            for functionality, count in Counter(all_functionalities).most_common(top_k)\n",
+    "            if count / circuit.n_gates > 0.2\n",
     "        ]\n",
     "        \n",
-    "        error_gate_indices = []\n",
+    "        predicted_gate_indices = []\n",
     "        for i, possible_functionalities in enumerate(functionalities_per_gate):\n",
     "            if len([functionality for functionality in possible_functionalities if functionality in top_functionalities]) != 0:\n",
     "                continue\n",
-    "            error_gate_indices.append(i)\n",
+    "            predicted_gate_indices.append(i)\n",
     "        \n",
-    "        return error_gate_indices"
+    "        # print(circuit)\n",
+    "        return predicted_gate_indices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unlike traditional debugging approaches that need to repeatedly process large samples, our bug identification method provides a one-shot solution by using the gate vectors from the upstream model. It takes advantage of many reusable modules that compose the algorithm. For example, the quantum Fourier transformation~(QFT) module, and the Grover module are often applied to find the best decision strategy or estimate the expectation of discrete random processes. This opens the door to inferring the possible functionality of a gate by comparing its vector to a standard vector list derived from quantum algorithms. This vector list refers to an algorithm dataset that is generated offline from widely-used algorithms, where each vector is labeled with a functionality. Note that in contrast to fidelity datasets, this dataset is hardware-independent.\n",
+    "\n",
+    "\n",
+    "Since a gate vector involves multiple paths, it can be viewed as an abstraction of a module in the circuit. To infer the functionality of a given gate, we first calculate the distance between the vector of this gate and the vector in the standard vector list. We label their functionalities to this gate if distances are below a threshold. \n",
+    "\n",
+    "<div style=\"text-align:center;\">\n",
+    "    <img src=\"pictures/2-6.detect_bug.jpg\"  width=\"60%\" height=\"60%\">\n",
+    "</div>\n",
+    "\n",
+    "For example, the figure above illustrates the distances between the vector of the CZ gate in the third layer and four standard vectors from the dataset. By setting a threshold of 0.7, this CZ gate is labeled with QFT and Quantum support vector machine~(QSVM) functionality.\n",
+    "\n",
+    "\n",
+    "<div style=\"text-align:center;\">\n",
+    "    <img src=\"pictures/2-6.algorithm.png\"  width=\"60%\" height=\"60%\">\n",
+    "</div>\n",
+    "\n",
+    "After labeling all gates in the circuit, we then apply Algorithm 1 to detect the gates that may exhibit bugs. Assuming that bugs only occur in a sub-circuit, we define a parameter $N_b$ as the maximum number of gates that can be involved in a bug. For each gate vector, we first regard it as a bug (line 1-2). We then collect the neighboring gates $G_{nb}$ that can be visited within ($N_b+1$) steps (line 3). The functionality that is shared by the most gates in $G_{nb}$ is denoted as $m_func$ (line 4).\n",
+    "For each functionality of the input vector, its gate is not identified as a bug in two cases: \n",
+    "\n",
+    "* If the functionality of this gate follows the most frequent functionality of neighboring gates that most gates have. (line 6-7).\n",
+    "* If $num$ exceeds $N_b$, the functionality of the sub-circuit, with more than $N_b$ gates, is identical. There is therefore a high probability that this gate is not a bug (line 8-10). \n"
    ]
   },
   {
@@ -119,15 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_negatives(circuit, n_bugs, basis_gates):\n",
+    "\n",
+    "def construct_negatives(circuit: Circuit, n_error_gates, basis_gates):\n",
     "    \n",
     "    n_qubits = circuit.n_qubits\n",
-    "    bug_circuit = copy.deepcopy(circuit)\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    bug_start = random.randint(0, max(circuit.n_gates - 1 - n_bugs, 1))\n",
-    "    bug_end = bug_start + n_bugs\n",
+    "    bug_circuit = circuit.copy()\n",
+    "    for gate in bug_circuit.gates:\n",
+    "        gate.vec = None\n",
+    "    import time\n",
+    "    random.seed(time.time())\n",
+    "    bug_start = random.randint(0, max(circuit.n_gates - 1 - n_error_gates, 1))\n",
+    "    bug_end = bug_start + n_error_gates\n",
     "    bug_gate_ids = list(range(bug_start, min(bug_end, circuit.n_gates)))\n",
     "\n",
     "    for bug_gate_id in bug_gate_ids:\n",
@@ -136,7 +169,7 @@
     "\n",
     "        name = random.choice(basis_gates) # ['rx', 'ry', 'rz', 'h', 'cz', 'cx']\n",
     "\n",
-    "        params = np.random.random((3,1)) * 2 * np.pi\n",
+    "        params = np.random.random((3,)) * 2 * np.pi\n",
     "        params = params.tolist()\n",
     "        \n",
     "        qubit1 = random.randint(0, n_qubits - 1)\n",
@@ -177,7 +210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [00:03<00:00,  5.07it/s]\n"
+      "100%|██████████| 32/32 [00:08<00:00,  3.76it/s]\n"
      ]
     }
    ],
@@ -186,8 +219,8 @@
     "algorithm_to_circuirts = defaultdict(list)\n",
     "algorithm_circuits = []\n",
     "\n",
-    "backend = LinearBackend(6)\n",
-    "vec_model = RandomwalkModel(n_steps = 3, n_walks = 30, backend = backend, alpha=.5)\n",
+    "backend = LinearBackend(8)\n",
+    "vec_model = RandomwalkModel(n_steps = 2, n_walks = 30, backend = backend, alpha=.5)\n",
     "\n",
     "for n_qubits in range(5, backend.n_qubits + 1):\n",
     "    for algorithm, circuit in zip(algorithm_names, get_algorithm_circuits(n_qubits, backend, algorithm_names)):\n",
@@ -209,30 +242,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4] []\n"
+      "algrithm: qft_5, identify_rate: 100.0\n",
+      "algrithm: hs_5, identify_rate: 33.333333333333336\n",
+      "algrithm: ising_5, identify_rate: 100.0\n",
+      "algrithm: qknn_5, identify_rate: 100.0\n",
+      "algrithm: qsvm_5, identify_rate: 66.66666666666667\n",
+      "algrithm: vqc_5, identify_rate: 100.0\n",
+      "algrithm: ghz_5, identify_rate: 33.333333333333336\n",
+      "algrithm: grover_5, identify_rate: 100.0\n",
+      "algrithm: qft_6, identify_rate: 100.0\n",
+      "algrithm: hs_6, identify_rate: 33.333333333333336\n",
+      "algrithm: ising_6, identify_rate: 100.0\n",
+      "algrithm: qknn_6, identify_rate: 100.0\n",
+      "algrithm: qsvm_6, identify_rate: 100.0\n",
+      "algrithm: vqc_6, identify_rate: 100.0\n",
+      "algrithm: ghz_6, identify_rate: 0.0\n",
+      "algrithm: grover_6, identify_rate: 100.0\n",
+      "algrithm: qft_7, identify_rate: 100.0\n",
+      "algrithm: hs_7, identify_rate: 0.0\n",
+      "algrithm: ising_7, identify_rate: 100.0\n",
+      "algrithm: qknn_7, identify_rate: 100.0\n",
+      "algrithm: qsvm_7, identify_rate: 100.0\n",
+      "algrithm: vqc_7, identify_rate: 100.0\n",
+      "algrithm: ghz_7, identify_rate: 100.0\n",
+      "algrithm: grover_7, identify_rate: 100.0\n",
+      "algrithm: qft_8, identify_rate: 100.0\n",
+      "algrithm: hs_8, identify_rate: 66.66666666666667\n",
+      "algrithm: ising_8, identify_rate: 100.0\n",
+      "algrithm: qknn_8, identify_rate: 100.0\n",
+      "algrithm: qsvm_8, identify_rate: 100.0\n",
+      "algrithm: vqc_8, identify_rate: 100.0\n",
+      "algrithm: ghz_8, identify_rate: 66.66666666666667\n",
+      "algrithm: grover_8, identify_rate: 100.0\n"
      ]
     }
    ],
    "source": [
-    "circuit = random.choice(algorithm_circuits)\n",
-    "bug_circuit, bug_gate_indices = construct_negatives(circuit, n_bugs=4, basis_gates= backend.basis_gates)\n",
-    "predict_indices = bug_indentify_model.identify_bug(bug_circuit)\n",
+    "# evaluate the model\n",
+    "for circuit in algorithm_circuits:\n",
+    "    error_circuit, error_gate_indices = construct_negatives(circuit, n_error_gates=3, basis_gates= backend.basis_gates)\n",
+    "    predict_indices = bug_indentify_model.identify_bug(error_circuit)\n",
     "\n",
-    "print(bug_gate_indices, predict_indices)\n",
+    "    correct_rate = 0\n",
+    "    for predict_indice in predict_indices:\n",
+    "        if predict_indice in error_gate_indices:\n",
+    "            correct_rate+=1\n",
     "\n",
-    "# correct_rate = 0\n",
-    "# for predict_indice in predict_indices:\n",
-    "#     if predict_indice in bug_gate_ids:\n",
-    "#         correct_rate+=1\n",
-    "\n",
-    "# print(str.format(\"identify_rate: {}\",  correct_rate * 100 / len(bug_gate_ids)))"
+    "    print(str.format(\"algrithm: {}, identify_rate: {}\", error_circuit.name, correct_rate * 100 / len(error_gate_indices)))"
    ]
   },
   {
