--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -65,16 +65,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'isSatisfiable': True, 'isSat': True}"
+       "{'restarts': 1,\n",
+       " 'conflicts': 8,\n",
+       " 'conflict cost': 0.063,\n",
+       " 'decisions': 0,\n",
+       " 'propagations': 0,\n",
+       " 'conflict literals': 40,\n",
+       " 'actual CPU time': 7.26835,\n",
+       " 'annealing time': 0.0,\n",
+       " 'quantum count': 0,\n",
+       " 'quantum success number': 8,\n",
+       " 'quantum conflict number': 13,\n",
+       " 'quantum one time solve number': 0,\n",
+       " 'isSatisfiable': True,\n",
+       " 'isSat': True}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,52 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-17 05:52:01,806 - INFO: WARNING: for repeatability, setting FPU to use double precision\n",
-      "2024-04-17 05:52:01,807 - INFO: Original method:\n",
-      "2024-04-17 05:52:01,808 - INFO: /JanusQ/examples/cnf_examples/uf50-01.cnf\n",
-      "2024-04-17 05:52:01,859 - INFO: ============================[ Problem Statistics ]=============================\n",
-      "2024-04-17 05:52:01,860 - INFO: |                                                                             |\n",
-      "2024-04-17 05:52:01,861 - INFO: |  Number of variables:            50                                         |\n",
-      "2024-04-17 05:52:01,862 - INFO: |  Number of clauses:             218                                         |\n",
-      "2024-04-17 05:52:01,863 - INFO: ============================[ Search Statistics ]==============================\n",
-      "2024-04-17 05:52:01,863 - INFO: | Conflicts |          ORIGINAL         |          LEARNT          | Progress |\n",
-      "2024-04-17 05:52:01,864 - INFO: |           |    Vars  Clauses Literals |    Limit  Clauses Lit/Cl |          |\n",
-      "2024-04-17 05:52:01,865 - INFO: ===============================================================================\n",
-      "2024-04-17 05:52:01,865 - INFO: ===============================================================================\n",
-      "2024-04-17 05:52:01,866 - INFO: restarts              : 1\n",
-      "2024-04-17 05:52:01,867 - INFO: conflicts             : 16             (285 /sec)\n",
-      "2024-04-17 05:52:01,869 - INFO: conflict cost         : 0.109 ms\n",
-      "2024-04-17 05:52:01,870 - INFO: decisions             : 36             (0.00 % random) (641 /sec)\n",
-      "2024-04-17 05:52:01,870 - INFO: decisions cost        : 0.042 ms\n",
-      "2024-04-17 05:52:01,871 - INFO: propagations          : 344            (6125 /sec)\n",
-      "2024-04-17 05:52:01,871 - INFO: propagations cost     : 0.213 ms\n",
-      "2024-04-17 05:52:01,872 - INFO: conflict literals     : 65             (19.75 % deleted)\n",
-      "2024-04-17 05:52:01,873 - INFO: actual CPU time       : 0.056159 s\n",
-      "2024-04-17 05:52:01,873 - INFO: this problem time     : 0.441 ms\n",
-      "2024-04-17 05:52:01,874 - INFO: annealing time        : 0 ms\n",
-      "2024-04-17 05:52:01,875 - INFO: quantum count         : 0\n",
-      "2024-04-17 05:52:01,875 - INFO: simulate time         : 0 s\n",
-      "2024-04-17 05:52:01,876 - INFO: quantum success number   : 0\n",
-      "2024-04-17 05:52:01,876 - INFO: quantum conflict number   : 0\n",
-      "2024-04-17 05:52:01,877 - INFO: quantum one time solve number   : 0\n",
-      "2024-04-17 05:52:01,878 - INFO: delta conflict time              : -1 ms\n",
-      "2024-04-17 05:52:01,879 - INFO: \n",
-      "2024-04-17 05:52:01,879 - INFO: SATISFIABLE\n",
-      "2024-04-17 05:52:01,880 - INFO: SAT\n",
-      "2024-04-17 05:52:01,883 - INFO: -1 2 -3 4 5 6 7 8 9 -10 -11 12 -13 14 -15 -16 -17 -18 19 20 -21 -22 23 -24 -25 -26 27 -28 -29 -30 -31 -32 -33 -34 35 36 37 -38 39 -40 -41 -42 -43 -44 -45 -46 -47 48 49 -50 0\n",
-      "2024-04-17 05:52:01,884 - INFO: ^0 1 ^2 3 4 5 6 7 8 ^9 ^10 11 ^12 13 ^14 ^15 ^16 ^17 18 19 ^20 ^21 22 ^23 ^24 ^25 26 ^27 ^28 ^29 ^30 ^31 ^32 ^33 34 35 36 ^37 38 ^39 ^40 ^41 ^42 ^43 ^44 ^45 ^46 47 48 ^49\n",
-      "2024-04-17 05:52:01,885 - INFO: \n",
-      "2024-04-17 05:52:01,885 - INFO: \n",
-      "2024-04-17 05:52:01,886 - INFO: /JanusQ/examples/cnf_examples/uf50-01.cnf has been solved.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -157,7 +127,7 @@
        " 'decisions': 0,\n",
        " 'propagations': 0,\n",
        " 'conflict literals': 65,\n",
-       " 'actual CPU time': 0.056159,\n",
+       " 'actual CPU time': 0.052606,\n",
        " 'annealing time': 0.0,\n",
        " 'quantum count': 0,\n",
        " 'quantum success number': 0,\n",
@@ -167,7 +137,7 @@
        " 'isSat': True}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
