modify 4-2 and add some cnf examples

--- a/examples/2-6.extend_framework_bug_identification.ipynb
+++ b/examples/2-6.extend_framework_bug_identification.ipynb
@@ -68,9 +68,17 @@
     "\n",
     "class BugIdentificationModel:\n",
     "    def __init__(self, vec_model: RandomwalkModel) -> None:\n",
+    "        '''\n",
+    "        description: bug identification model based on upstream model\n",
+    "        param {RandomwalkModel} vec_model: random walk and turn gates to vecs\n",
+    "        '''\n",
     "        self.vec_model = vec_model\n",
     "    \n",
     "    def train(self, algorithm_to_circuirts: dict[str, list[Circuit]]):\n",
+    "        '''\n",
+    "        description: use algorithm as train dataset and mark circuit functionality\n",
+    "        param {dict[str, list[Circuit]]} algorithm_to_circuirts: algorithms \n",
+    "        '''\n",
     "        self.total_vecs = []\n",
     "        self.functionalities = []\n",
     "        \n",
@@ -84,7 +92,14 @@
     "        self.total_vecs = np.array(self.total_vecs)\n",
     "        self.functionalities = np.array(self.functionalities)\n",
     "\n",
+    "    \n",
     "    def identify_bug(self, circuit: Circuit, top_k = 3, dist_threshold = .2):\n",
+    "        '''\n",
+    "        description: identify bug by computing distance between vecs and its functionalities\n",
+    "        param {Circuit} circuit: circuit to be identifed\n",
+    "        param {int} top_k: select k bug candidates\n",
+    "        param {float} dist_threshold: distance threshold\n",
+    "        '''\n",
     "        gate_vecs = self.vec_model.vectorize(circuit)\n",
     "        \n",
     "        functionalities_per_gate = []\n",
@@ -151,7 +166,13 @@
    "outputs": [],
    "source": [
     "\n",
-    "def construct_negatives(circuit: Circuit, n_error_gates, basis_gates):\n",
+    "def construct_negatives(circuit: Circuit, n_error_gates:int, basis_gates):\n",
+    "    '''\n",
+    "    description: construct bug circuit\n",
+    "    param {Circuit} circuit: construct bug circuit base on circuit \n",
+    "    param {ing} n_error_gates: number of bug\n",
+    "    param {list} basis_gates: asic types of error gates\n",
+    "    '''\n",
     "    \n",
     "    n_qubits = circuit.n_qubits\n",
     "    bug_circuit = circuit.copy()\n",
