--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure the model\n",
-    "file_path = \"cnf_examples/uf50-01.cnf\"  # input cnf flie\n",
+    "file_path = \"cnf_examples/UF100/uf100-01.cnf\"  # input cnf flie\n",
     "cpu_lim = 0  # limit the cpu time (s). 0 means infinite\n",
     "mem_lim = 0  # limit the memory 0 means infinite\n",
     "strictp = True  # isStrict"
@@ -63,29 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 9,\n",
-       " 'conflict cost': 0.127,\n",
-       " 'decisions': 0,\n",
-       " 'propagations': 0,\n",
-       " 'conflict literals': 37,\n",
-       " 'actual CPU time': 5.17836,\n",
-       " 'annealing time': 0.0,\n",
-       " 'quantum count': 0,\n",
-       " 'quantum success number': 17,\n",
-       " 'quantum conflict number': 13,\n",
+       " 'conflicts': 16,\n",
+       " 'conflict cost': 0.184,\n",
+       " 'decisions': 1,\n",
+       " 'decisions cost': 0.05,\n",
+       " 'propagations': 597,\n",
+       " 'propagations cost': 0.596,\n",
+       " 'conflict literals': 96,\n",
+       " 'actual CPU time': 8241.82,\n",
+       " 'solving time': 5.414,\n",
+       " 'annealing time': 4.32,\n",
+       " 'simulation time': 2028.09,\n",
+       " 'quantum count': 36,\n",
+       " 'quantum success number': 11,\n",
+       " 'quantum conflict number': 25,\n",
        " 'quantum one time solve number': 0,\n",
-       " 'isSatisfiable': True,\n",
-       " 'isSat': True}"
+       " 'is satisfiable': True,\n",
+       " 'is sat': True}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,29 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'restarts': 1,\n",
-       " 'conflicts': 16,\n",
-       " 'conflict cost': 0.11,\n",
-       " 'decisions': 0,\n",
-       " 'propagations': 0,\n",
-       " 'conflict literals': 65,\n",
-       " 'actual CPU time': 0.056052,\n",
+       "{'restarts': 3,\n",
+       " 'conflicts': 384,\n",
+       " 'conflict cost': 3.512,\n",
+       " 'decisions': 463,\n",
+       " 'decisions cost': 0.612,\n",
+       " 'propagations': 9130,\n",
+       " 'propagations cost': 6.574,\n",
+       " 'conflict literals': 2416,\n",
+       " 'actual CPU time': 121.453,\n",
+       " 'solving time': 12.958,\n",
        " 'annealing time': 0.0,\n",
+       " 'simulation time': 0.0,\n",
        " 'quantum count': 0,\n",
        " 'quantum success number': 0,\n",
        " 'quantum conflict number': 0,\n",
        " 'quantum one time solve number': 0,\n",
-       " 'isSatisfiable': True,\n",
-       " 'isSat': True}"
+       " 'is satisfiable': True,\n",
+       " 'is sat': True}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,6 +152,13 @@
     "# solve by minisat\n",
     "solve_by_minisat(file_path, verb=False, cpu_lim=cpu_lim, mem_lim=mem_lim)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
