--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "# test hyqsat calibration\n",
     "# input cnf flie\n",
-    "file_path = \"cnf_examples/uf50-01.cnf\"\n",
+    "file_path = \"cnf_examples/UF50/uf50-01.cnf\"\n",
     "from janusq.hyqsat import readCNF\n",
     "\n",
     "print(readCNF(file_path))"
