--- a/examples/2-6.extend_framework_bug_identification.ipynb
+++ b/examples/2-6.extend_framework_bug_identification.ipynb
@@ -26,8 +26,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-18 12:39:57,448\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67084288 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-18 12:39:57,586\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-04-20 16:42:03,287\tERROR services.py:1329 -- Failed to start the dashboard \n",
+      "2024-04-20 16:42:03,349\tERROR services.py:1354 -- Error should be written to 'dashboard.log' or 'dashboard.err'. We are printing the last 20 lines for you. See 'https://docs.ray.io/en/master/ray-observability/ray-logging.html#logging-directory-structure' to find where the log file is.\n",
+      "2024-04-20 16:42:03,361\tERROR services.py:1398 -- \n",
+      "The last 20 lines of /tmp/ray/session_2024-04-20_16-41-35_264172_672/logs/dashboard.log (it contains the error message from the dashboard): \n",
+      "2024-04-20 16:41:55,283\tINFO utils.py:123 -- Module ray.dashboard.modules.actor.actor_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:57,825\tINFO utils.py:123 -- Module ray.dashboard.modules.data.data_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,074\tINFO utils.py:123 -- Module ray.dashboard.modules.event.event_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,103\tINFO utils.py:123 -- Module ray.dashboard.modules.healthz.healthz_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,122\tINFO utils.py:123 -- Module ray.dashboard.modules.healthz.healthz_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,910\tINFO utils.py:123 -- Module ray.dashboard.modules.job.job_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,917\tINFO utils.py:123 -- Module ray.dashboard.modules.job.job_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "2024-04-20 16:41:59,956\tINFO utils.py:123 -- Module ray.dashboard.modules.log.log_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
+      "\n",
+      "2024-04-20 16:42:03,558\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67108864 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=0.37gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2024-04-20 16:42:06,342\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -231,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:08<00:00,  3.76it/s]\n"
+      "100%|███████████████████████████████████████████| 32/32 [01:04<00:00,  2.03s/it]\n"
      ]
     }
    ],
@@ -279,26 +292,26 @@
       "algrithm: ghz_5, identify_rate: 33.333333333333336\n",
       "algrithm: grover_5, identify_rate: 100.0\n",
       "algrithm: qft_6, identify_rate: 100.0\n",
-      "algrithm: hs_6, identify_rate: 33.333333333333336\n",
+      "algrithm: hs_6, identify_rate: 100.0\n",
       "algrithm: ising_6, identify_rate: 100.0\n",
       "algrithm: qknn_6, identify_rate: 100.0\n",
-      "algrithm: qsvm_6, identify_rate: 100.0\n",
+      "algrithm: qsvm_6, identify_rate: 33.333333333333336\n",
       "algrithm: vqc_6, identify_rate: 100.0\n",
-      "algrithm: ghz_6, identify_rate: 0.0\n",
+      "algrithm: ghz_6, identify_rate: 66.66666666666667\n",
       "algrithm: grover_6, identify_rate: 100.0\n",
       "algrithm: qft_7, identify_rate: 100.0\n",
-      "algrithm: hs_7, identify_rate: 0.0\n",
+      "algrithm: hs_7, identify_rate: 100.0\n",
       "algrithm: ising_7, identify_rate: 100.0\n",
       "algrithm: qknn_7, identify_rate: 100.0\n",
-      "algrithm: qsvm_7, identify_rate: 100.0\n",
+      "algrithm: qsvm_7, identify_rate: 33.333333333333336\n",
       "algrithm: vqc_7, identify_rate: 100.0\n",
-      "algrithm: ghz_7, identify_rate: 100.0\n",
+      "algrithm: ghz_7, identify_rate: 0.0\n",
       "algrithm: grover_7, identify_rate: 100.0\n",
       "algrithm: qft_8, identify_rate: 100.0\n",
-      "algrithm: hs_8, identify_rate: 66.66666666666667\n",
+      "algrithm: hs_8, identify_rate: 0.0\n",
       "algrithm: ising_8, identify_rate: 100.0\n",
       "algrithm: qknn_8, identify_rate: 100.0\n",
-      "algrithm: qsvm_8, identify_rate: 100.0\n",
+      "algrithm: qsvm_8, identify_rate: 33.333333333333336\n",
       "algrithm: vqc_8, identify_rate: 100.0\n",
       "algrithm: ghz_8, identify_rate: 66.66666666666667\n",
       "algrithm: grover_8, identify_rate: 100.0\n"
@@ -329,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ISCA')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +358,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "a5cb17940ec456bfd6f6b24ecec011f7bb1827da42833da90014f36a02c01967"
@@ -353,5 +365,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
