modify 1-1 and readme

--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -13,7 +13,7 @@
     "**From docker.**\n",
     "Pull docker using docker \n",
     "        \n",
-    "        docker pull jxhhhh/janusq:latest\n",
+    "        docker pull janusq/janusq:latest\n",
     "\n",
     "The code is in \"/home/JanusQ-main\". The examples that can be directly run is in \"/home/JanusQ-main/examples\"\n",
     "\n",
