--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -34,6 +34,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
     "sys.path.append('..')\n",
     "\n",
     "from janusq.hyqsat import solve_by_janusct, solve_by_minisat"
@@ -158,7 +159,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_result = {}\n",
+    "dir_name = 'cnf_examples/test'\n",
+    "result_key = ['restarts', 'conflicts', 'conflict cost', 'decisions', 'decisions cost', 'propagations', 'propagations cost', 'conflict literals', 'actual CPU time', 'solving time']\n",
+    "for filename in os.listdir(dir_name):\n",
+    "    janusq_res = solve_by_janusct(os.path.join(dir_name, filename))\n",
+    "    minisat_res = solve_by_minisat(os.path.join(dir_name, filename))\n",
+    "    for key in result_key:\n",
+    "        if key not in all_result:\n",
+    "            all_result[key] = {\n",
+    "                'janus': 0,\n",
+    "                'minisat': 0\n",
+    "            }\n",
+    "        else:\n",
+    "            all_result[key]['janus'] += janusq_res[key]\n",
+    "            all_result[key]['minisat'] += minisat_res[key]\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
