--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -35,6 +35,8 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import logging\n",
+    "\n",
     "sys.path.append('..')\n",
     "\n",
     "from janusq.hyqsat import solve_by_janusct, solve_by_minisat"
@@ -620,8 +622,8 @@
     "dir_name = 'cnf_examples/test'\n",
     "result_key = ['restarts', 'conflicts', 'conflict cost', 'decisions', 'decisions cost', 'propagations', 'propagations cost', 'conflict literals', 'actual CPU time', 'solving time']\n",
     "for filename in os.listdir(dir_name):\n",
-    "    janusq_res = solve_by_janusct(os.path.join(dir_name, filename))\n",
-    "    minisat_res = solve_by_minisat(os.path.join(dir_name, filename))\n",
+    "    janusq_res = solve_by_janusct(os.path.join(dir_name, filename), verb=False)\n",
+    "    minisat_res = solve_by_minisat(os.path.join(dir_name, filename), verb=False)\n",
     "    for key in result_key:\n",
     "        if key not in all_result:\n",
     "            all_result[key] = {\n",
