--- a/janusq/tests/compare_predict_performance.ipynb
+++ b/janusq/tests/compare_predict_performance.ipynb
@@ -56,7 +56,7 @@
     "from matplotlib.colors import LinearSegmentedColormap\n",
     "import numpy as np\n",
     "import random\n",
-    "def plot_scaater(reals, predicts, durations ,name):\n",
+    "def plot_scatter(reals, predicts, durations ,name):\n",
     "    par = np.polyfit(reals, predicts, 1, full=True)\n",
     "    slope=par[0][0]\n",
     "    intercept=par[0][1]\n",
@@ -273,7 +273,7 @@
     "    test_reals = np.array(test_reals)\n",
     "    test_predicts = np.array(test_predicts)\n",
     "    durations = np.array(durations)\n",
-    "    plot_scaater(test_reals, test_predicts, durations, name = f'scatter_step{n_steps}.png')\n",
+    "    plot_scatter(test_reals, test_predicts, durations, name = f'scatter_step{n_steps}.png')\n",
     "    print('average inaccuracy = ', np.abs(test_predicts - test_reals).mean())\n",
     "    delta_steps.append(np.abs(np.array(test_reals)-np.array(test_predicts)).tolist())\n",
     "\n"
@@ -380,7 +380,7 @@
     "for cir in test_dataset:\n",
     "    rbs.append(get_baseline_predict(cir, rb_single_average_error, rb_couple_average_error))\n",
     "rbs = np.array(rbs)\n",
-    "plot_scaater(test_reals, rbs, durations, name = f'scatter_rb.png')\n",
+    "plot_scatter(test_reals, rbs, durations, name = f'scatter_rb.png')\n",
     "print(np.abs(rbs-test_reals).mean(), np.abs(rbs-test_reals).std())\n",
     "delta_rb=np.abs(np.array(test_reals)-np.array(rbs)).tolist()\n"
    ]
@@ -433,7 +433,7 @@
     "for cir in test_dataset:\n",
     "    xebs.append(get_baseline_predict(cir, xeb_single_average_error, xeb_couple_average_error))\n",
     "xebs = np.array(xebs)\n",
-    "plot_scaater(test_reals, xebs, durations, name = f'scatter_xeb.png')\n",
+    "plot_scatter(test_reals, xebs, durations, name = f'scatter_xeb.png')\n",
     "print(np.abs(xebs-test_reals).mean(), np.abs(xebs-test_reals).std())\n",
     "delta_xeb=np.abs(np.array(test_reals)-np.array(xebs)).tolist()\n"
    ]
