--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -74,19 +74,19 @@
       "text/plain": [
        "{'restarts': 1,\n",
        " 'conflicts': 7,\n",
-       " 'conflict cost': 0.069,\n",
-       " 'decisions': 2,\n",
-       " 'decisions cost': 0.03,\n",
-       " 'propagations': 322,\n",
-       " 'propagations cost': 0.25,\n",
-       " 'conflict literals': 49,\n",
-       " 'actual CPU time': 7299.27,\n",
-       " 'solving time': 2.25,\n",
-       " 'annealing time': 1.8,\n",
-       " 'simulation time': 937.689,\n",
-       " 'quantum count': 15,\n",
-       " 'quantum success number': 7,\n",
-       " 'quantum conflict number': 8,\n",
+       " 'conflict cost': 0.067,\n",
+       " 'decisions': 4,\n",
+       " 'decisions cost': 0.032,\n",
+       " 'propagations': 325,\n",
+       " 'propagations cost': 0.305,\n",
+       " 'conflict literals': 50,\n",
+       " 'actual CPU time': 7672.84,\n",
+       " 'solving time': 4.035,\n",
+       " 'annealing time': 3.48,\n",
+       " 'simulation time': 1312.69,\n",
+       " 'quantum count': 29,\n",
+       " 'quantum success number': 11,\n",
+       " 'quantum conflict number': 18,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -128,14 +128,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 2.575,\n",
+       " 'conflict cost': 2.588,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.433,\n",
+       " 'decisions cost': 0.436,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 5.632,\n",
+       " 'propagations cost': 5.649,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 96.573,\n",
-       " 'solving time': 10.273,\n",
+       " 'actual CPU time': 102.369,\n",
+       " 'solving time': 10.346,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum count': 0,\n",
@@ -165,26 +165,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 5, 'minisat': 9}, 'conflicts': {'janus': 59, 'minisat': 755}, 'conflict cost': {'janus': 0.438, 'minisat': 4.856999999999999}, 'decisions': {'janus': 9, 'minisat': 958}, 'decisions cost': {'janus': 0.11399999999999999, 'minisat': 0.895}, 'propagations': {'janus': 1846, 'minisat': 17399}, 'propagations cost': {'janus': 1.4569999999999999, 'minisat': 10.632}, 'conflict literals': {'janus': 365, 'minisat': 4558}, 'actual CPU time': {'janus': 36601.96, 'minisat': 361.793}, 'solving time': {'janus': 17.467, 'minisat': 19.482999999999997}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 130, 'minisat': 1383}, 'conflict cost': {'janus': 0.9600000000000001, 'minisat': 9.043000000000001}, 'decisions': {'janus': 38, 'minisat': 1814}, 'decisions cost': {'janus': 0.29800000000000004, 'minisat': 1.7349999999999999}, 'propagations': {'janus': 3986, 'minisat': 32252}, 'propagations cost': {'janus': 3.468, 'minisat': 19.529999999999998}, 'conflict literals': {'janus': 782, 'minisat': 8726}, 'actual CPU time': {'janus': 88728.0, 'minisat': 852.031}, 'solving time': {'janus': 46.221000000000004, 'minisat': 36.023}, 'annealing time': {'janus': 39.720000000000006, 'minisat': 0.0}, 'simulation time': {'janus': 14152.242, 'minisat': 0.0}, 'quantum count': {'janus': 331, 'minisat': 0}, 'quantum success number': {'janus': 136, 'minisat': 0}, 'quantum conflict number': {'janus': 195, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
    "source": [
     "all_result = {}\n",
     "dir_name = 'cnf_examples/test'\n",
-    "result_key = ['restarts', 'conflicts', 'conflict cost', 'decisions', 'decisions cost', 'propagations', 'propagations cost', 'conflict literals', 'actual CPU time', 'solving time']\n",
     "for filename in os.listdir(dir_name):\n",
     "    janusq_res = solve_by_janusct(os.path.join(dir_name, filename), verb=False)\n",
     "    minisat_res = solve_by_minisat(os.path.join(dir_name, filename), verb=False)\n",
-    "    for key in result_key:\n",
+    "    for key in janusq_res:\n",
     "        if key not in all_result:\n",
     "            all_result[key] = {\n",
     "                'janus': 0,\n",
     "                'minisat': 0\n",
     "            }\n",
-    "        else:\n",
-    "            all_result[key]['janus'] += janusq_res[key]\n",
-    "            all_result[key]['minisat'] += minisat_res[key]\n",
+    "        all_result[key]['janus'] += janusq_res[key]\n",
+    "        all_result[key]['minisat'] += minisat_res[key]\n",
     "\n",
     "print(all_result)    "
    ]
@@ -225,34 +223,58 @@
        "      <th>conflict literals</th>\n",
        "      <th>actual CPU time</th>\n",
        "      <th>solving time</th>\n",
+       "      <th>annealing time</th>\n",
+       "      <th>simulation time</th>\n",
+       "      <th>quantum count</th>\n",
+       "      <th>quantum success number</th>\n",
+       "      <th>quantum conflict number</th>\n",
+       "      <th>quantum one time solve number</th>\n",
+       "      <th>is satisfiable</th>\n",
+       "      <th>is sat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>janus</th>\n",
-       "      <td>5</td>\n",
-       "      <td>59</td>\n",
-       "      <td>0.438</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>1846</td>\n",
-       "      <td>1.457</td>\n",
-       "      <td>365</td>\n",
-       "      <td>36601.960</td>\n",
-       "      <td>17.467</td>\n",
+       "      <td>12</td>\n",
+       "      <td>130</td>\n",
+       "      <td>0.960</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>3986</td>\n",
+       "      <td>3.468</td>\n",
+       "      <td>782</td>\n",
+       "      <td>88728.000</td>\n",
+       "      <td>46.221</td>\n",
+       "      <td>39.72</td>\n",
+       "      <td>14152.242</td>\n",
+       "      <td>331</td>\n",
+       "      <td>136</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>minisat</th>\n",
-       "      <td>9</td>\n",
-       "      <td>755</td>\n",
-       "      <td>4.857</td>\n",
-       "      <td>958</td>\n",
-       "      <td>0.895</td>\n",
-       "      <td>17399</td>\n",
-       "      <td>10.632</td>\n",
-       "      <td>4558</td>\n",
-       "      <td>361.793</td>\n",
-       "      <td>19.483</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>9.043</td>\n",
+       "      <td>1814</td>\n",
+       "      <td>1.735</td>\n",
+       "      <td>32252</td>\n",
+       "      <td>19.530</td>\n",
+       "      <td>8726</td>\n",
+       "      <td>852.031</td>\n",
+       "      <td>36.023</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -260,16 +282,24 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus           5         59          0.438          9           0.114   \n",
-       "minisat         9        755          4.857        958           0.895   \n",
+       "janus          12        130          0.960         38           0.298   \n",
+       "minisat        19       1383          9.043       1814           1.735   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            1846              1.457                365        36601.960   \n",
-       "minisat         17399             10.632               4558          361.793   \n",
+       "janus            3986              3.468                782        88728.000   \n",
+       "minisat         32252             19.530               8726          852.031   \n",
        "\n",
-       "         solving time  \n",
-       "janus          17.467  \n",
-       "minisat        19.483  "
+       "         solving time  annealing time  simulation time  quantum count  \\\n",
+       "janus          46.221           39.72        14152.242            331   \n",
+       "minisat        36.023            0.00            0.000              0   \n",
+       "\n",
+       "         quantum success number  quantum conflict number  \\\n",
+       "janus                       136                      195   \n",
+       "minisat                       0                        0   \n",
+       "\n",
+       "         quantum one time solve number  is satisfiable  is sat  \n",
+       "janus                                0              12      12  \n",
+       "minisat                              0              12      12  "
       ]
      },
      "execution_count": 6,
