--- a/examples/2-4.fidelity_optimization.ipynb
+++ b/examples/2-4.fidelity_optimization.ipynb
@@ -77,14 +77,14 @@
     "backend = FullyConnectedBackend(n_qubits)\n",
     "\n",
     "circuits = random_circuits(backend, n_circuits=50, n_gate_list=list(range(10, 150, 10)), two_qubit_prob_list=[0.3, 0.4, 0.6], reverse=True)\n",
-    "vec_model = RandomwalkModel(n_steps = n_steps, n_walks = n_walks, backend = backend)\n",
-    "vec_model.train(circuits, multi_process=False, remove_redundancy = False)\n",
+    "up_model = RandomwalkModel(n_steps = n_steps, n_walks = n_walks, backend = backend)\n",
+    "up_model.train(circuits, multi_process=False, remove_redundancy = False)\n",
     "\n",
-    "all_paths = vec_model.all_paths()\n",
+    "all_paths = up_model.all_paths()\n",
     "high_error_paths = random.choices(all_paths, k = 20)\n",
     "\n",
     "error_model = GateErrorModel.random_model(backend=backend, high_error_paths=high_error_paths)\n",
-    "error_model.vec_model = vec_model\n",
+    "error_model.vec_model = up_model\n",
     "\n",
     "simulator = NoisySimulator(backend=backend, gate_error_model = error_model)"
    ]
@@ -107,7 +107,7 @@
     "# train a fidelity model\n",
     "ground_truth_fidelities = map(lambda circuit: simulator.obtain_circuit_fidelity(circuit)[0], circuits, show_progress=False, multi_process=True)\n",
     "\n",
-    "fidelity_model = FidelityModel(vec_model)\n",
+    "fidelity_model = FidelityModel(up_model)\n",
     "fidelity_model.train((circuits, ground_truth_fidelities))"
    ]
   },
