--- a/examples/2-6.extend_framework_bug_identification.ipynb
+++ b/examples/2-6.extend_framework_bug_identification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extend Janus-CT To Identify Bugs in the Quantum Circuit\n",
+    "# Extend Janus-CT To Identify Bugs in Quantum Circuit\n",
     "\n",
     "**Author:** Congliang Lang \\& Siwei Tan  \n",
     "\n",
@@ -47,7 +47,6 @@
     "from collections import defaultdict\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
     "from janusq.data_objects.backend import LinearBackend\n",
-    "import copy\n",
     "from janusq.data_objects.circuit import Circuit"
    ]
   },
@@ -67,12 +66,12 @@
     "from collections import Counter\n",
     "\n",
     "class BugIdentificationModel:\n",
-    "    def __init__(self, vec_model: RandomwalkModel) -> None:\n",
+    "    def __init__(self, up_model: RandomwalkModel) -> None:\n",
     "        '''\n",
     "        description: bug identification model based on upstream model\n",
-    "        param {RandomwalkModel} vec_model: random walk and turn gates to vecs\n",
+    "        param {RandomwalkModel} up_model: random walk and turn gates to vecs\n",
     "        '''\n",
-    "        self.vec_model = vec_model\n",
+    "        self.up_model = up_model\n",
     "    \n",
     "    def train(self, algorithm_to_circuirts: dict[str, list[Circuit]]):\n",
     "        '''\n",
@@ -85,7 +84,7 @@
     "        algorithm_names = list(algorithm_to_circuirts.keys())\n",
     "        for algorithm_name, circuits in algorithm_to_circuirts.items():\n",
     "            for circuit in circuits:\n",
-    "                vecs = self.vec_model.vectorize(circuit)\n",
+    "                vecs = self.up_model.vectorize(circuit)\n",
     "                self.total_vecs += list(vecs)\n",
     "                self.functionalities += [algorithm_names.index(algorithm_name)] * len(vecs)\n",
     "\n",
@@ -100,7 +99,7 @@
     "        param {int} top_k: select k bug candidates\n",
     "        param {float} dist_threshold: distance threshold\n",
     "        '''\n",
-    "        gate_vecs = self.vec_model.vectorize(circuit)\n",
+    "        gate_vecs = self.up_model.vectorize(circuit)\n",
     "        \n",
     "        functionalities_per_gate = []\n",
     "        all_functionalities = []\n",
@@ -236,19 +235,19 @@
     }
    ],
    "source": [
-    "algorithm_names = ['qft', 'hs', 'ising', 'qknn', 'qsvm', 'vqc', 'ghz', 'grover']\n",
+    "algorithm_names = ['qft', 'hs', 'ising', 'qknn', 'qsvm', 'vqc', 'ghz', 'grover'] # 8 programs\n",
     "algorithm_to_circuirts = defaultdict(list)\n",
     "algorithm_circuits = []\n",
     "\n",
     "backend = LinearBackend(8)\n",
-    "vec_model = RandomwalkModel(n_steps = 2, n_walks = 30, backend = backend, alpha=.5)\n",
+    "up_model = RandomwalkModel(n_steps = 2, n_walks = 30, backend = backend, alpha=.5)\n",
     "\n",
     "for n_qubits in range(5, backend.n_qubits + 1):\n",
     "    for algorithm, circuit in zip(algorithm_names, get_algorithm_circuits(n_qubits, backend, algorithm_names)):\n",
     "        algorithm_to_circuirts[algorithm].append(circuit)\n",
     "        algorithm_circuits.append(circuit)\n",
     "\n",
-    "vec_model.train(algorithm_circuits)"
+    "up_model.train(algorithm_circuits)"
    ]
   },
   {
@@ -257,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bug_indentify_model = BugIdentificationModel(vec_model)\n",
+    "bug_indentify_model = BugIdentificationModel(up_model)\n",
     "bug_indentify_model.train(algorithm_to_circuirts)"
    ]
   },
