--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -15,7 +15,7 @@
     "        \n",
     "        docker pull janusq/janusq:latest\n",
     "\n",
-    "The code is in \"/home/JanusQ-main\". The examples that can be directly run is in \"/home/JanusQ-main/examples\"\n",
+    "The code is in \"/JanusQ\". The examples that can be directly run is in \"/JanusQ/examples\"\n",
     "\n",
     "**From wheel.**\n",
     "Download janusq.whl from \"JanusQ-main/dist\".\n",
