--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -73,20 +73,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 7,\n",
-       " 'conflict cost': 0.067,\n",
-       " 'decisions': 4,\n",
+       " 'conflicts': 8,\n",
+       " 'conflict cost': 0.064,\n",
+       " 'decisions': 3,\n",
        " 'decisions cost': 0.032,\n",
-       " 'propagations': 325,\n",
-       " 'propagations cost': 0.305,\n",
-       " 'conflict literals': 50,\n",
-       " 'actual CPU time': 7672.84,\n",
-       " 'solving time': 4.035,\n",
-       " 'annealing time': 3.48,\n",
-       " 'simulation time': 1312.69,\n",
-       " 'quantum count': 29,\n",
-       " 'quantum success number': 11,\n",
-       " 'quantum conflict number': 18,\n",
+       " 'propagations': 326,\n",
+       " 'propagations cost': 0.259,\n",
+       " 'conflict literals': 55,\n",
+       " 'actual CPU time': 7.28606,\n",
+       " 'solving time': 1.03,\n",
+       " 'annealing time': 0.46,\n",
+       " 'simulation time': 1.11494,\n",
+       " 'quantum success number': 8,\n",
+       " 'quantum conflict number': 15,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -128,17 +127,16 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 2.588,\n",
+       " 'conflict cost': 2.681,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.436,\n",
+       " 'decisions cost': 0.425,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 5.649,\n",
+       " 'propagations cost': 5.61,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 102.369,\n",
-       " 'solving time': 10.346,\n",
+       " 'actual CPU time': 0.098497,\n",
+       " 'solving time': 10.472,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
-       " 'quantum count': 0,\n",
        " 'quantum success number': 0,\n",
        " 'quantum conflict number': 0,\n",
        " 'quantum one time solve number': 0,\n",
@@ -165,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 130, 'minisat': 1383}, 'conflict cost': {'janus': 0.9600000000000001, 'minisat': 9.043000000000001}, 'decisions': {'janus': 38, 'minisat': 1814}, 'decisions cost': {'janus': 0.29800000000000004, 'minisat': 1.7349999999999999}, 'propagations': {'janus': 3986, 'minisat': 32252}, 'propagations cost': {'janus': 3.468, 'minisat': 19.529999999999998}, 'conflict literals': {'janus': 782, 'minisat': 8726}, 'actual CPU time': {'janus': 88728.0, 'minisat': 852.031}, 'solving time': {'janus': 46.221000000000004, 'minisat': 36.023}, 'annealing time': {'janus': 39.720000000000006, 'minisat': 0.0}, 'simulation time': {'janus': 14152.242, 'minisat': 0.0}, 'quantum count': {'janus': 331, 'minisat': 0}, 'quantum success number': {'janus': 136, 'minisat': 0}, 'quantum conflict number': {'janus': 195, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 125, 'minisat': 1383}, 'conflict cost': {'janus': 0.9210000000000003, 'minisat': 9.341999999999999}, 'decisions': {'janus': 31, 'minisat': 1814}, 'decisions cost': {'janus': 0.29300000000000004, 'minisat': 1.6239999999999997}, 'propagations': {'janus': 4029, 'minisat': 32252}, 'propagations cost': {'janus': 3.1610000000000005, 'minisat': 19.378000000000004}, 'conflict literals': {'janus': 734, 'minisat': 8726}, 'actual CPU time': {'janus': 87.75882999999999, 'minisat': 0.837894}, 'solving time': {'janus': 13.057, 'minisat': 36.74499999999998}, 'annealing time': {'janus': 6.28, 'minisat': 0.0}, 'simulation time': {'janus': 14.004918, 'minisat': 0.0}, 'quantum success number': {'janus': 121, 'minisat': 0}, 'quantum conflict number': {'janus': 193, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
@@ -225,7 +223,6 @@
        "      <th>solving time</th>\n",
        "      <th>annealing time</th>\n",
        "      <th>simulation time</th>\n",
-       "      <th>quantum count</th>\n",
        "      <th>quantum success number</th>\n",
        "      <th>quantum conflict number</th>\n",
        "      <th>quantum one time solve number</th>\n",
@@ -237,20 +234,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>130</td>\n",
-       "      <td>0.960</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0.298</td>\n",
-       "      <td>3986</td>\n",
-       "      <td>3.468</td>\n",
-       "      <td>782</td>\n",
-       "      <td>88728.000</td>\n",
-       "      <td>46.221</td>\n",
-       "      <td>39.72</td>\n",
-       "      <td>14152.242</td>\n",
-       "      <td>331</td>\n",
-       "      <td>136</td>\n",
-       "      <td>195</td>\n",
+       "      <td>125</td>\n",
+       "      <td>0.921</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.293</td>\n",
+       "      <td>4029</td>\n",
+       "      <td>3.161</td>\n",
+       "      <td>734</td>\n",
+       "      <td>87.758830</td>\n",
+       "      <td>13.057</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>14.004918</td>\n",
+       "      <td>121</td>\n",
+       "      <td>193</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -259,17 +255,16 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>9.043</td>\n",
+       "      <td>9.342</td>\n",
        "      <td>1814</td>\n",
-       "      <td>1.735</td>\n",
+       "      <td>1.624</td>\n",
        "      <td>32252</td>\n",
-       "      <td>19.530</td>\n",
+       "      <td>19.378</td>\n",
        "      <td>8726</td>\n",
-       "      <td>852.031</td>\n",
-       "      <td>36.023</td>\n",
+       "      <td>0.837894</td>\n",
+       "      <td>36.745</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -282,19 +277,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        130          0.960         38           0.298   \n",
-       "minisat        19       1383          9.043       1814           1.735   \n",
+       "janus          12        125          0.921         31           0.293   \n",
+       "minisat        19       1383          9.342       1814           1.624   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            3986              3.468                782        88728.000   \n",
-       "minisat         32252             19.530               8726          852.031   \n",
+       "janus            4029              3.161                734        87.758830   \n",
+       "minisat         32252             19.378               8726         0.837894   \n",
        "\n",
-       "         solving time  annealing time  simulation time  quantum count  \\\n",
-       "janus          46.221           39.72        14152.242            331   \n",
-       "minisat        36.023            0.00            0.000              0   \n",
+       "         solving time  annealing time  simulation time  \\\n",
+       "janus          13.057            6.28        14.004918   \n",
+       "minisat        36.745            0.00         0.000000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       136                      195   \n",
+       "janus                       121                      193   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
@@ -313,6 +308,13 @@
     "df = pd.DataFrame(all_result)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
